--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div id="conteudo"> 
     <h1 class="titulo">🟠AÇAFRÃO CLICKER🟠</h1><br><br>
     <div id="praficar">
-        <img id="jumpscare" src="../img/image_7.png"> 
+        <img id="jumpscare" src="../image/image_7.png"> 
         <div id="melhorias">
              <p onclick="turbinar()"  id="melhorar" >Açafrão Turbinado!</p>
                 <p onclick="ativainfo1('Tur')"  id="infomelhorar">I</p>
@@ -333,4 +333,5 @@ function turbinar(){
 </script>
     
 </body>
+
 </html>
